--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "Backend/server.js",  // Correct path to server.js in the Backend folder
+      "src": "Backend/server.js",  
       "use": "@vercel/node"
     }
   ],
