--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,18 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "Backend/server.js",  
+      "src": "server.js",  
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "Backend/server.js"
+      "dest": "server.js"
     },
     {
       "src": "/(.*)",
-      "dest": "Backend/server.js"
+      "dest": "server.js"
     }
   ]
 }
